Fixed bug #37278 (SOAP not respecting uri in __soapCall)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_2@213695 c90b9560-bf6c-de11-be94-00142212c4b1