ext/soap/soap.c
@@ -2663,7 +2663,7 @@ PHP_METHOD(SoapClient, __call)
 
 			if (zend_hash_find(ht, "uri", sizeof("uri"), (void**)&tmp) == SUCCESS &&
 			    Z_TYPE_PP(tmp) == IS_STRING) {
-				soap_action = Z_STRVAL_PP(tmp);
+				uri = Z_STRVAL_PP(tmp);
 			}
 		} else if (Z_TYPE_P(options) != IS_NULL) {
 			php_error_docref(NULL TSRMLS_CC, E_ERROR, "first parameter must be string or null");
